--- a/clase-1/index.html
+++ b/clase-1/index.html
@@ -11,19 +11,42 @@
 <body>
     <h1>Clase 1 Back End</h1>
     <h2>Tema 1 - Plantillas Literales</h2>
-    <p>Los template strings son una forma de concatenar strings mas sencilla y legible</p>
+    <p>Las plantillas literales (o template literals) en JavaScript son una forma de trabajar con cadenas de texto más
+        flexible y expresiva. Se definen usando comillas invertidas (`) en lugar de comillas simples (') o dobles (").
+    </p>
     <h2>Tema 2 - Funciones</h2>
-    <p>Las funciones son bloques de código que podemos reutilizar en nuestro programa. Destaquemos que las funciones
-        deben tener una única responsabilidad</p>
+    <p>En programación, una función es un bloque de código reutilizable que realiza una tarea específica. Se define una
+        vez y puede ser llamada (ejecutada) varias veces desde diferentes partes del programa.</p>
     <h2>Tema 3 - Scope</h2>
-    <p>Es el alcance que tienen las variables dentro de nuestro programa</p>
+    <p>En programación, el scope (o alcance) se refiere al contexto donde las variables, funciones y objetos son
+        accesibles. Determina desde dónde puedes usar o modificar una variable en tu código.</p>
     <h2>Tema 4 - Closures</h2>
     <p>Los cierres o clausuras es un concepto que se refiere a la capacidad de una funcion anidada de acceder a las
-        variables de su funcion padre, incluso cuando la funcion padre ya termino de ejecutarse</p>
-    <h2>Tema 5 - Clases y POO</h2>
-    <p>Clase: Es un modelo o plantilla que define propiedades (atributos) y comportamientos (métodos) que tendrán los objetos.
+        variables de su funcion padre, incluso cuando la funcion padre ya termino de ejecutarse. Un closure en
+        JavaScript es una función que "recuerda" el scope en el que fue creada, incluso después de que dicho scope haya
+        terminado su ejecución. Esto permite que una función interna acceda a las variables de la función externa,
+        incluso después de que esta última haya finalizado.
     </p>
-    <p>Objeto: Es una instancia concreta de una clase, que contiene valores específicos para los atributos definidos en la clase.</p>
+    <h2>Tema 5 - Clases y POO</h2>
+    <p>La Programación Orientada a Objetos (POO) es un paradigma de programación que organiza el código en torno a
+        objetos, los cuales son entidades que combinan datos (atributos) y comportamientos (métodos).</p>
+    <p>Clase:
+
+        Es un modelo o plantilla para crear objetos.
+        Define las propiedades (atributos) y comportamientos (métodos) que tendrán los objetos.</p>
+    <p>Objeto:
+
+        Es una instancia de una clase.
+        Representa una entidad con atributos y métodos concretos.</p>
+    <p>
+        Atributos:
+
+        Son las propiedades o características del objeto.
+        
+        Métodos:
+
+        Son las funciones que definen el comportamiento de los objetos.
+    </p>
     <script src="index.js"></script>
 </body>
 
