--- a/clase-2/index.html
+++ b/clase-2/index.html
@@ -9,60 +9,110 @@
 </head>
 
 <body>
+    <h3>¡Importante! <i>Ingresar a las herramientas de programador para poder ver las acciones del archivo .js
+        (click derecho + inspeccionar -> consola)</i>
+    </h3>
     <h1>Bienvenidos a la clase 2 de Backend</h1>
     <div>
-        <h2>Desestructuración</h2>
-        <p>La desestructuración en programación es una técnica que permite extraer valores de arreglos o propiedades de
-            objetos y asignarlos a variables de manera concisa. Es especialmente útil para simplificar el acceso a
-            datos.
-        </p>
-        <h2>Valores por defecto</h2>
-        <p>Los valores por defecto en programación son valores asignados automáticamente a variables o parámetros cuando
-            no
-            se les proporciona uno explícito.</p>
-        <h2>Trabajo por modulos</h2>
-        <p>Un módulo en programación es una unidad de código independiente y reutilizable que agrupa funciones,
-            variables, u
-            objetos relacionados. Se utiliza para organizar y estructurar programas grandes, promoviendo la
-            reutilización y
-            la mantenibilidad.</p>
-        <h2>Clases y Objetos</h2>
-        <p>Clases: Son plantillas o moldes que definen las propiedades (atributos) y comportamientos (métodos) que
-            tendrán
-            los objetos. Representan conceptos generales.</p>
-        <p>Objetos: Son instancias de una clase. Representan entidades específicas que se crean a partir de una clase y
-            poseen valores concretos para sus atributos.</p>
-        <h2>Metodos</h2>
-        <p>Un método es una función asociada a un objeto o clase que define un comportamiento específico. Es una forma
-            de
-            realizar acciones relacionadas con ese objeto o de interactuar con sus propiedades.</p>
-        <h2>Herencia</h2>
-        <p>La herencia es un principio de la programación orientada a objetos (POO) que permite a una clase (llamada
-            subclase o clase hija) adquirir propiedades y métodos de otra clase (llamada superclase o clase padre). Esto
-            permite reutilizar y extender el comportamiento de clases existentes.</p>
-        <h2>Variables y metodos estaticos</h2>
-        <p>En programación orientada a objetos, variables y métodos estáticos pertenecen a la clase, no a las instancias
-            de
-            la clase. Esto significa que se acceden directamente a través de la clase sin necesidad de crear un objeto.
-        </p>
-        <h2>Includes</h2>
-        <p>El método includes en JavaScript se utiliza para verificar si un arreglo o una cadena de texto contiene un
-            elemento o una subcadena específica. Devuelve un valor booleano (true o false).</p>
-        <h2>Async / Await</h2>
-        <p>async y await son palabras clave en JavaScript que facilitan el manejo de código asíncrono, haciéndolo más
-            legible y sencillo al trabajar con Promesas.</p>
-        <h2>Object.values</h2>
-        <p>
-            El método Object.values en JavaScript devuelve un arreglo con los valores de las propiedades enumerables de
-            un objeto. Es útil para trabajar directamente con los valores sin preocuparse por sus claves.
-        </p>
-        <h2>Object.entries</h2>
-        <p>El método Object.entries en JavaScript devuelve un arreglo de pares clave-valor de las propiedades
-            enumerables de un objeto. Cada par clave-valor se representa como un arreglo de dos elementos: [clave,
-            valor].</p>
-        <h2>Object.keys</h2>
-        <p>El método Object.keys en JavaScript devuelve un arreglo con las claves (o nombres de las propiedades) de las
-            propiedades enumerables de un objeto.</p>
+        <div class="container">
+            <h2>Desestructuración</h2>
+            <p>La desestructuración en programación es una técnica que permite extraer valores de arreglos o propiedades
+                de
+                objetos y asignarlos a variables de manera concisa. Es especialmente útil para simplificar el acceso a
+                datos.
+            </p>
+
+        </div>
+        <div class="container">
+
+            <h2>Valores por defecto</h2>
+            <p>Los valores por defecto en programación son valores asignados automáticamente a variables o parámetros
+                cuando
+                no
+                se les proporciona uno explícito.</p>
+        </div>
+        <div class="container">
+
+            <h2>Trabajo por modulos</h2>
+            <p>Un módulo en programación es una unidad de código independiente y reutilizable que agrupa funciones,
+                variables, u
+                objetos relacionados. Se utiliza para organizar y estructurar programas grandes, promoviendo la
+                reutilización y
+                la mantenibilidad.</p>
+        </div>
+        <div class="container">
+
+            <h2>Clases y Objetos</h2>
+            <p>Clases: Son plantillas o moldes que definen las propiedades (atributos) y comportamientos (métodos) que
+                tendrán
+                los objetos. Representan conceptos generales.</p>
+            <p>Objetos: Son instancias de una clase. Representan entidades específicas que se crean a partir de una
+                clase y
+                poseen valores concretos para sus atributos.</p>
+        </div>
+        <div class="container">
+
+            <h2>Metodos</h2>
+            <p>Un método es una función asociada a un objeto o clase que define un comportamiento específico. Es una
+                forma
+                de
+                realizar acciones relacionadas con ese objeto o de interactuar con sus propiedades.</p>
+        </div>
+        <div class="container">
+
+            <h2>Herencia</h2>
+            <p>La herencia es un principio de la programación orientada a objetos (POO) que permite a una clase (llamada
+                subclase o clase hija) adquirir propiedades y métodos de otra clase (llamada superclase o clase padre).
+                Esto
+                permite reutilizar y extender el comportamiento de clases existentes.</p>
+        </div>
+        <div class="container">
+
+            <h2>Variables y metodos estaticos</h2>
+            <p>En programación orientada a objetos, variables y métodos estáticos pertenecen a la clase, no a las
+                instancias
+                de
+                la clase. Esto significa que se acceden directamente a través de la clase sin necesidad de crear un
+                objeto.
+            </p>
+        </div>
+        <div class="container">
+
+            <h2>Includes</h2>
+            <p>El método includes en JavaScript se utiliza para verificar si un arreglo o una cadena de texto contiene
+                un
+                elemento o una subcadena específica. Devuelve un valor booleano (true o false).</p>
+        </div>
+        <div class="container">
+
+            <h2>Async / Await</h2>
+            <p>async y await son palabras clave en JavaScript que facilitan el manejo de código asíncrono, haciéndolo
+                más
+                legible y sencillo al trabajar con Promesas.</p>
+        </div>
+        <div class="container">
+ 
+            <h2>Object.values</h2>
+            <p>
+                El método Object.values en JavaScript devuelve un arreglo con los valores de las propiedades enumerables
+                de
+                un objeto. Es útil para trabajar directamente con los valores sin preocuparse por sus claves.
+            </p>
+        </div>
+        <div class="container">
+
+            <h2>Object.entries</h2>
+            <p>El método Object.entries en JavaScript devuelve un arreglo de pares clave-valor de las propiedades
+                enumerables de un objeto. Cada par clave-valor se representa como un arreglo de dos elementos: [clave,
+                valor].</p>
+        </div>
+        <div class="container">
+
+            <h2>Object.keys</h2>
+            <p>El método Object.keys en JavaScript devuelve un arreglo con las claves (o nombres de las propiedades) de
+                las
+                propiedades enumerables de un objeto.</p>
+        </div>
     </div>
     <script src="index.js" type="module"></script>
 </body>
